--- a/src/styles/grid.css
+++ b/src/styles/grid.css
@@ -1,5 +1,4 @@
 .tile {
-  display: inline-block;
   cursor: pointer;
   position: relative;
   width: var(--size);
@@ -19,14 +18,15 @@
 }
 
 #tiles {
+  height: 100vh;
+  width: 100vw;
   position: relative;
   z-index: 2;
 
-  height: calc(100vh - 1px);
-  width: calc(100vw - 1px);
-
   display: grid;
-  overflow: hidden;
-  grid-template-columns: repeat(var(--columns), 1fr);
+  grid-template-columns: repeat(var(--cols), 1fr);
   grid-template-rows: repeat(var(--rows), 1fr);
+  
+  justify-content: center;
+  align-items: center;
 }
